@@ -1,3 +1,9 @@
+Wed May 27 09:50:51 2015  Eric Wong  <e@80x24.org>
+
+	* ext/openssl/ossl_asn1.c (ossl_asn1_traverse, ossl_asn1_decode,
+	  ossl_asn1_decode_all): use RB_GC_GUARD instead of volatile
+	  [ruby-core:69371] [Bug #11185]
+
 Wed May 27 09:27:30 2015  Eric Wong  <e@80x24.org>
 
 	* lib/drb/drb.rb (set_sockopt): remove redundant fcntl call
